--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section id="home" class="hero">
   <div class="hero-content reveal">
     <h1>Welcome to the Practice of Dr. Robert H. Kammen, Psy.D.</h1>
-    <p>Over 20 years helping individuals, couples, and families.</p>
+    <p>Over 30 years helping individuals, couples, and families.</p>
     <a href="#about" class="btn">Learn More</a>
   </div>
 </section>
@@ -40,19 +40,23 @@
 <section id="about" class="about section">
   <div class="about-text slide-in-right">
     <h2 class="section-title">About Dr. Kammen</h2>
-    <p><strong>Introduction to Dr. Kammen</strong></p>
-    <p>My practice centers around helping couples, families, and individuals. Often, the people that I see in my practice are reacting to life changes and stresses, including couple and family interactions and conflicts, life changes and transitions, relationship issues, health concerns, work stress, anxiety, and depression. I strongly believe that each person is trying to do their best to meet what are often complex and competing needs and expectations.</p>
-    <p>I strive to fit my clinical skills and approaches to each individual, couple, and family. Our first few meetings focus on an evaluation of your needs, expectations, and comfort level. From the evaluation, we will jointly develop a psychotherapy treatment plan and work together to achieve the established goals. The treatment depends upon your active participation both in and out of our sessions.</p>
-    <p>Please feel free to explore my site for further information. I look forward to the opportunity for us to work together in collaboration towards reaching your goals.</p>
-    <p><em>Sincerely,</em><br>Robert H. Kammen, Psy.D.</p>
-    <p>I view my role in this collaborative treatment process as providing everyone who enters my office with the utmost respect. My goal is that together we develop an understanding of your unique experiences, values, beliefs, expectations, and strengths. My approach is targeted at building upon each person’s skills and capabilities to help them use their inner resources to meet their personal goals. I have been in clinical practice for over thirty years. My experience has taught me that a strong professional relationship is the most important component to successful therapy.</p>
+    <h3>My View of Psychotherapy</h3>
+    <p>Often, the people I work with in my practice are reacting to life changes and stressors, including difficult couple and family interactions, life transitions, health concerns, work stress, assertiveness and boundary setting, anxiety, and depression. I strongly believe that each person is trying to do their best to meet what are often complex and competing needs and expectations.
+    </p><p><br>
+      I strive to fit my clinical skills and approaches to each individual, couple, and family. Our first few meetings focus on an evaluation of your needs, expectations, and comfort level. We jointly develop a psychotherapy treatment plan and work together to achieve the established goals. The treatment will depends upon your active participation both in and out of our sessions.
+    </p><p><br>
+      I view my role in this collaborative treatment process as providing everyone who enters my office with the utmost respect. My goal is that - together - we can develop an understanding of your strengths, unique experiences, values, beliefs, and expectations.
+    </p><p><br>
+      My approach is targeted at building upon each person's skills and capabilities to help you make use of your own unique resources to meet your personal goals. I have been in clinical practice for over thirty years and my experience has taught me that a strong, respectful professional relationship is the most important component to successful therapy.
+    </p><p><br>
+      Please feel free to explore my site for further information. I look forward to the opportunity for us to work together in collaboration towards reaching your goals.
+    </p><p><br><em>Sincerely,</em><br>Robert H. Kammen, Psy.D.</p>
     <br>
     <h3>Background & Education</h3>
-    <p>I always enjoyed observing and learning from the ways that people relate with their world. I met a number of people from all walks of life, who were struggling and felt lost. I went on to Stockton State College in New Jersey and majored in psychology in order to learn more about how to help them. I graduated in 1979, and went on for a Master's Degree in Clinical Social Work at the State University of New York at Albany. I was introduced to the complexities and pressures within couples, families, and the worlds in which we all live. My interests broadened to interactions within couples and families and interactions between people and the complex worlds that make up their lives.</p>
-    <p>Upon completing my Master's Degree in 1982, I worked for three years providing outpatient psychotherapy to families, couples and individuals at Family Service Association of Atlantic County. While there, I had the privilege of receiving specialized training in Family and Marital Therapy from the renowned Philadelphia Child Guidance Center. This experience drew me to pursuing my Doctorate at Indiana University of Pennsylvania and I graduated with my Doctorate in Psychology in 1989 with further specialization in Family and Marital Therapy.</p>
-    <p>I joined a group psychology practice in Binghamton, NY where the senior partner was an adjunct professor of Family and Systems Therapy in the Doctoral Psychology Program at the State University of New York at Binghamton. In addition to my clinical work, I participated in regular seminars developed for the members of the practice.</p>
-    <p>I moved to the Wyoming Valley in 1991 to take a position as a member of the Geisinger Medical Group in the Behavioral Medicine Department. I provided outpatient therapy to individuals, couples, and families within a large medical practice site that is now appropriately named the Kistler Clinic. I also provided consultations to medical patients at the Geisinger Wyoming Valley Medical Center. I was a professional member of the Diabetes Treatment Team, and I also consulted regularly to the rehabilitation unit based at the GWV Medical Center. From 1998 to January of 2000, in addition to my clinical work, I served as the Director of the Behavioral Medicine Department serving Geisinger’s Northeastern Region. Upon leaving Geisinger, I entered into private practice in Kingston, PA.</p>
-    <a href="#services" class="btn btn-outline">View Services</a>
+    <p>I attended Stockton State College in New Jersey and majored in psychology in order to learn more about how to help individuals who were struggling with life issues. I went on to pursue a Master's Degree in Clinical Social Work at the State University of New York (SUNY) Albany. At SUNY Albany, my interests broadened to the complex interactions within couples and families and interactions between people and the complicated worlds that make up their lives.</p>
+    <br><p>Upon completing my Master's Degree, I worked for three years providing outpatient psychotherapy to families, couples and individuals at The Family Service Association of Atlantic County. There, I had the privilege of receiving specialized training in Family and Marital Therapy from the renowned Philadelphia Child Guidance Center. This experience drew me toward pursuing my Doctorate at Indiana University of Pennsylvania, and I graduated with my Doctorate in Clinical Psychology with further specialization in providing therapy for families, couples, and individuals.</p>
+    <br><p>After graduating, I joined a psychology practice in Binghamton, NY for three years before relocating to the Wyoming Valley in 1991 to take a position as a member of the Geisinger Medical Group, in the Behavioral Medicine Department. I provided outpatient therapy to individuals, couples, and families within a large medical practice site that is now appropriately named the Kistler Clinic. I also provided consultations to medical patients at the Geisinger Wyoming Valley (GWV) Medical Center, was a professional member of the Diabetes Treatment Team, and consulted regularly with the rehabilitation unit based at the Geisinger Wyoming Valley (GWY) Medical Center. From 1998 to 2000, in addition to my clinical work, I served as the Director of the Behavioral Medicine Department for Geisinger's Northeastern Region. Upon leaving Geisinger, I entered into private practice in Kingston, PA.</p>
+    <br><a href="#services" class="btn btn-outline">View Services</a><br>
   </div>
   <div class="about-image slide-in-left">
     <img src="office.jpg" alt="Office">
@@ -63,17 +67,14 @@
 <section id="services" class="services section alt">
   <div class="services-text slide-in-left">
     <h2 class="section-title">Services</h2>
-
     <h3>Insurance Information</h3>
-    <p>I am a preferred provider and I participate with a number of insurance companies. If you wish to use your insurance, it is important that you call the number on the back of your insurance card under Mental Health Care to find out if you need to be preauthorized in order to enter into treatment.</p>
-    <p>You should also ask your insurance company how much of their allowable fee you would be responsible for in the form of deductibles, co-payments, or other charges.</p>
-    <p>It is always a good idea to review the section on mental health services in your insurance coverage booklet.</p>
+    <p>I am a preferred provider and I participate with a number of insurance companies. If you wish to use your insurance, it is important that you call the number on the back of your insurance card under Mental Health Care to find out how much of their allowable fee you would be responsible for in the form of deductibles, co-payments, or other charges.</p>
     <br>
     <h3>Psychological & Counseling Services</h3>
     <br>
     <h4>Length & Frequency of Sessions</h4>
-    <p>Our meetings will usually last about 45 to 50 minutes (although I set aside more time for our getting to know each other at our first meeting). Unless you are in crisis, we will usually meet every other week, to allow you time to try out what we discuss during our time together.</p>
-    <p>I am normally in the office Monday through Friday usually starting at 9 am and finishing at 5 pm. I also offer very limited evening hours.</p>
+    <p>Our meetings will usually last about 45 to 50 minutes (although I set aside more time for our getting to know each other at our first meeting). Unless you are in heightened distress, we will usually meet every other week, to allow you time to try out what we discuss during our time together.</p>
+    <br><p>I am normally in the office Monday through Friday usually starting at 9 am and finishing at 5 pm. I do not have evening or weekend hours.</p>
     <br>
     <h4>Some Reasons for Scheduling a Session</h4>
     <div class="services-list">
@@ -99,7 +100,6 @@
   <h2 class="section-title">Resources</h2>
   <div class="resource-grid">
     <a href="http://www.apahelpcenter.org/" target="_blank" class="resource-item hover-zoom">Help Center at American Psychological Association</a>
-    <a href="http://www.APA.org" target="_blank" class="resource-item hover-zoom">American Psychological Association</a>
     <a href="http://www.papsy.org" target="_blank" class="resource-item hover-zoom">Pennsylvania Psychological Association</a>
     <a href="http://www.nimh.nih.gov/index.shtml" target="_blank" class="resource-item hover-zoom">National Institute of Mental Health</a>
     <a href="http://www.adaa.org" target="_blank" class="resource-item hover-zoom">Anxiety Disorders Association of America</a>
@@ -134,24 +134,13 @@
   <div class="contact-note">
     <p><strong>Phone:</strong> <a href="tel:15707181760" class="contact-phone">570-718-1760</a></p>
     <p>My office manager is available from 9AM–1PM Monday through Friday to answer your questions and to schedule your first appointment.</p>
-    <p>Out of respect for my patients, I usually do not answer the phone when I am meeting with someone. I will make every attempt to return phone calls within 24 hours with the exception of weekends and holidays.</p>
-  </div>
+    <br><p>Out of respect for my patients, I usually do not answer the phone when I am meeting with someone. I will make every attempt to return phone calls within 24 hours with the exception of weekends and holidays.</p>
+    <br><p><strong>Email is not confidential,</strong> please call to schedule your appointment or if you have any questions.</p>
+    <br><p>Thank you for visiting my website.3</p>
 
-  <form class="contact-form" autocomplete="on">
-    <label>
-      <span>Your Name</span>
-      <input type="text" name="name" placeholder="Your Name" required>
-    </label>
-    <label>
-      <span>Your Email</span>
-      <input type="email" name="email" placeholder="your@email.com" required>
-    </label>
-    <label>
-      <span>Your Message</span>
-      <textarea name="message" placeholder="How can I help?" required></textarea>
-    </label>
-    <button type="submit" class="btn">Send Message</button>
-  </form>
+  </div>
+  <br><br><br>
+
 </section>
 
 <!-- Footer -->
