--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
     <h3>My View of Psychotherapy</h3>
     <p>Often, the people I work with in my practice are reacting to life changes and stressors, including difficult couple and family interactions, life transitions, health concerns, work stress, assertiveness and boundary setting, anxiety, and depression. I strongly believe that each person is trying to do their best to meet what are often complex and competing needs and expectations.
     </p><p><br>
-      I strive to fit my clinical skills and approaches to each individual, couple, and family. Our first few meetings focus on an evaluation of your needs, expectations, and comfort level. We jointly develop a psychotherapy treatment plan and work together to achieve the established goals. The treatment will depends upon your active participation both in and out of our sessions.
-    </p><p><br>
-      I view my role in this collaborative treatment process as providing everyone who enters my office with the utmost respect. My goal is that - together - we can develop an understanding of your strengths, unique experiences, values, beliefs, and expectations.
-    </p><p><br>
-      My approach is targeted at building upon each person's skills and capabilities to help you make use of your own unique resources to meet your personal goals. I have been in clinical practice for over thirty years and my experience has taught me that a strong, respectful professional relationship is the most important component to successful therapy.
-    </p><p><br>
-      Please feel free to explore my site for further information. I look forward to the opportunity for us to work together in collaboration towards reaching your goals.
-    </p><p><br><em>Sincerely,</em><br>Robert H. Kammen, Psy.D.</p>
+    I strive to fit my clinical skills and approaches to each individual, couple, and family. Our first few meetings focus on an evaluation of your needs, expectations, and comfort level. We jointly develop a psychotherapy treatment plan and work together to achieve the established goals. The treatment will depends upon your active participation both in and out of our sessions.
+  </p><p><br>
+    I view my role in this collaborative treatment process as providing everyone who enters my office with the utmost respect. My goal is that - together - we can develop an understanding of your strengths, unique experiences, values, beliefs, and expectations.
+  </p><p><br>
+    My approach is targeted at building upon each person's skills and capabilities to help you make use of your own unique resources to meet your personal goals. I have been in clinical practice for over thirty years and my experience has taught me that a strong, respectful professional relationship is the most important component to successful therapy.
+  </p><p><br>
+    Please feel free to explore my site for further information. I look forward to the opportunity for us to work together in collaboration towards reaching your goals.
+  </p><p><br><em>Sincerely,</em><br>Robert H. Kammen, Psy.D.</p>
+    <div class="services-image slide-in-right">
+      <img src="rob.jpeg" alt="Counseling Services">
+    </div>
     <br>
     <h3>Background & Education</h3>
     <p>I attended Stockton State College in New Jersey and majored in psychology in order to learn more about how to help individuals who were struggling with life issues. I went on to pursue a Master's Degree in Clinical Social Work at the State University of New York (SUNY) Albany. At SUNY Albany, my interests broadened to the complex interactions within couples and families and interactions between people and the complicated worlds that make up their lives.</p>
@@ -58,10 +61,11 @@
     <br><p>After graduating, I joined a psychology practice in Binghamton, NY for three years before relocating to the Wyoming Valley in 1991 to take a position as a member of the Geisinger Medical Group, in the Behavioral Medicine Department. I provided outpatient therapy to individuals, couples, and families within a large medical practice site that is now appropriately named the Kistler Clinic. I also provided consultations to medical patients at the Geisinger Wyoming Valley (GWV) Medical Center, was a professional member of the Diabetes Treatment Team, and consulted regularly with the rehabilitation unit based at the Geisinger Wyoming Valley (GWY) Medical Center. From 1998 to 2000, in addition to my clinical work, I served as the Director of the Behavioral Medicine Department for Geisinger's Northeastern Region. Upon leaving Geisinger, I entered into private practice in Kingston, PA.</p>
     <br><a href="#services" class="btn btn-outline">View Services</a><br>
   </div>
-  <div class="about-image slide-in-left">
-    <img src="office.jpg" alt="Office">
-  </div>
 </section>
+
+<div class="about2-text slide-in-right">
+  <img src="office.jpg" alt="Office" class="office-img">
+</div>
 
 <!-- Services Section -->
 <section id="services" class="services section alt">
@@ -91,7 +95,7 @@
     </div>
   </div>
   <div class="services-image slide-in-right">
-    <img src="services.jpg" alt="Counseling Services">
+    <img src="couch.png" alt="Counseling Services">
   </div>
 </section>
 
@@ -139,7 +143,11 @@
     <br><p>Thank you for visiting my website.3</p>
 
   </div>
-  <br><br><br>
+  <br>
+  <div class="services-image slide-in-right">
+    <img src="card.png" alt="My Card">
+  </div>
+  <br><br>
 
 </section>
 
@@ -151,3 +159,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
