--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <p>My office manager is available from 9AM–1PM Monday through Friday to answer your questions and to schedule your first appointment.</p>
     <br><p>Out of respect for my patients, I usually do not answer the phone when I am meeting with someone. I will make every attempt to return phone calls within 24 hours with the exception of weekends and holidays.</p>
     <br><p><strong>Email is not confidential,</strong> please call to schedule your appointment or if you have any questions.</p>
-    <br><p>Thank you for visiting my website.3</p>
+    <br><p>Thank you for visiting my website.</p>
 
   </div>
   <br>
