--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <section id="location" class="location section alt">
   <h2 class="section-title">Location</h2>
   <div class="location-container">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.753226311796!2d-75.894!3d41.261!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDFsMjYnNDAuMCJOIDc1wrA1Myc0MC4wIlc!5e0!3m2!1sen!2sus!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" title="Office location map"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d604.5780031825545!2d-75.88934626175214!3d41.2635187464433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c51a7285c9ea85%3A0x20c0a01976f54b57!2s250%20Pierce%20St%2C%20Kingston%2C%20PA%2018704!5e0!3m2!1sen!2sus!4v1758200886055!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" title="Office location map"></iframe>
     <div class="address">
       <p><strong>Office</strong><br>250 Pierce St, Suite 214<br>Kingston, PA 18704</p>
       <p><strong>Phone:</strong> <a href="tel:15707181760">570-718-1760</a></p>
