--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h3>Background & Education</h3>
     <p>I attended Stockton State College in New Jersey and majored in psychology in order to learn more about how to help individuals who were struggling with life issues. I went on to pursue a Master's Degree in Clinical Social Work at the State University of New York (SUNY) Albany. At SUNY Albany, my interests broadened to the complex interactions within couples and families and interactions between people and the complicated worlds that make up their lives.</p>
     <br><p>Upon completing my Master's Degree, I worked for three years providing outpatient psychotherapy to families, couples and individuals at The Family Service Association of Atlantic County. There, I had the privilege of receiving specialized training in Family and Marital Therapy from the renowned Philadelphia Child Guidance Center. This experience drew me toward pursuing my Doctorate at Indiana University of Pennsylvania, and I graduated with my Doctorate in Clinical Psychology with further specialization in providing therapy for families, couples, and individuals.</p>
-    <br><p>After graduating, I joined a psychology practice in Binghamton, NY for three years before relocating to the Wyoming Valley in 1991 to take a position as a member of the Geisinger Medical Group, in the Behavioral Medicine Department. I provided outpatient therapy to individuals, couples, and families within a large medical practice site that is now appropriately named the Kistler Clinic. I also provided consultations to medical patients at the Geisinger Wyoming Valley (GWV) Medical Center, was a professional member of the Diabetes Treatment Team, and consulted regularly with the rehabilitation unit based at the Geisinger Wyoming Valley (GWY) Medical Center. From 1998 to 2000, in addition to my clinical work, I served as the Director of the Behavioral Medicine Department for Geisinger's Northeastern Region. Upon leaving Geisinger, I entered into private practice in Kingston, PA.</p>
+    <br><p>After graduating, I joined a psychology practice in Binghamton, NY for three years before relocating to the Wyoming Valley in 1991 to take a position as a member of the Geisinger Medical Group, in the Behavioral Medicine Department. I provided outpatient therapy to individuals, couples, and families within a large medical practice site that is now appropriately named the Kistler Clinic. I also provided consultations to medical patients at the Geisinger Wyoming Valley (GWV) Medical Center, was a professional member of the Diabetes Treatment Team, and consulted regularly with the rehabilitation unit based at the Geisinger Wyoming Valley (GWV) Medical Center. From 1998 to 2000, in addition to my clinical work, I served as the Director of the Behavioral Medicine Department for Geisinger's Northeastern Region. Upon leaving Geisinger, I entered into private practice in Kingston, PA.</p>
     <br><a href="#services" class="btn btn-outline">View Services</a><br>
   </div>
 </section>
@@ -73,7 +73,7 @@
   <div class="services-text slide-in-left">
     <h2 class="section-title">Services</h2>
     <h3>Insurance Information</h3>
-    <p>I am a preferred provider and I participate with a number of insurance companies. If you wish to use your insurance, it is important that you call the number on the back of your insurance card under Mental Health Care to find out how much of their allowable fee you would be responsible for in the form of deductibles, co-payments, or other charges.</p>
+    <p>I am a preferred provider and I participate with a number of insurance companies. If you wish to use your insurance, it is important that you call the number on the back of your insurance card under Mental Healthcare to find out if I am a provider for your insurance, and how much of their allowable fee you would be responsible for in the form of deductibles, co-payments, or other charges.</p>
     <br>
     <h3>Psychological & Counseling Services</h3>
     <br>
@@ -86,8 +86,8 @@
       <ul>
         <li>Depression</li><li>Loss of Interest or Drive</li><li>Lack of Meaning/Purpose</li><li>Fears and Worries</li>
         <li>Social Discomfort</li><li>Avoidance</li><li>Panic Symptoms</li><li>Obsessions and Compulsions</li>
-        <li>Guilt</li><li>Self-Blame</li><li>Self-Esteem Issues</li><li>Sleep Difficulties</li><li>Academic Issues</li>
-        <li>Difficulty Focusing</li><li>Assertiveness Challenges</li><li>Family Conflict</li><li>Parenting Issues</li>
+        <li>Guilt</li><li>Self-Blame</li><li>Self-Esteem Issues</li><li>Sleep Difficulties</li>
+        <li>Difficulty Focusing</li><li>Assertiveness Challenges</li><li>Family Conflict</li>
         <li>Pre-Marital Counseling</li><li>Relationship Problems</li><li>Jealousy and Trust Issues</li>
         <li>Separation and Divorce</li><li>Communication Problems</li><li>Changes Associated with Aging</li>
         <li>Chronic and Acute Health Issues</li><li>Anxiety</li><li>Grief and Loss</li><li>Isolation and Loneliness</li>
